[project]
name = "ai-langchain-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "langchain>=1.3.12",
    "langchain-core>=1.4.9",
    "langchain-deepseek>=1.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
]

[tool.deptry]
# 标记 src 为本地包，不报 DEP001
known_first_party = ["src"]
